app/components/presenter/components/control-panel/control-panel.scss
$control-panel-background-color: #ccc;
$control-panel-background-color-active: #5B00FB;
$control-panel-font-color: #515151;
$control-panel-font-color-active: #fff;

.affix {
	top: 0;
	width: 100%;
}

.control-panel-container {
	display: flex;
	flex-direction: row;
	min-height: 100px;
	color: $control-panel-font-color;
	background-color: $control-panel-background-color;
	z-index: 99;
	width: 100%;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);

	@media screen and (max-width: 767px) {
		flex-wrap: wrap;

	}


	.control-panel {
		cursor: pointer;
		min-width: 100px;
		border: none;
		display: flex;
		align-items: center;
		justify-content: center;
		flex-direction: column;
		padding: 20px;
		flex-grow: 2;
		transition: all 0.3s cubic-bezier(.25,.8,.25,1);

		&:hover {
			box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
		}
	}

	.active {
		background-color: $control-panel-background-color-active;
		color: $control-panel-font-color-active;
	}

	.disabled {
		color: #dddddd;
		cursor: not-allowed;
		pointer-events: none;
		opacity: .65;
		filter: alpha(opacity=65);
		-webkit-box-shadow: none;
		box-shadow: none;
		&:hover {
			box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
		}
	}
}

